--- a/frontend/src/Styles/Year/View.css
+++ b/frontend/src/Styles/Year/View.css
@@ -48,11 +48,17 @@
 }
 
 .year-today {
-    border-radius: 2px;
+    border-radius: 3px;
     border-style: solid;
     border-color: #737373;
     border-width: 1px;
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
 }
+
+.year-today .year-colorbox {
+    width: 14px;
+    height: 14px;
+}
+
 
